@@ -1,3 +1,8 @@
+2014-03-26  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSConnection.m: handle invalidation of connection while
+	getting root proxy.
+
 2014-03-26 Riccardo Mottola <rm@gnu.org>
 
 	* Source/NSProcessInfo.m (determineOperatingSystem):
